--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="{{ asset('assets/style.css') }}">
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +14,13 @@
         {% endblock %}
     </head>
     <body>
+    <div class="navig"><nav>
+            <a href="{{ path('app_main') }}"><li>Home</li></a>
+            <a href="{{ path('app_login') }}"><li>Log - in</li></a>
+            <li id="services">Services</li>
+            <a href="{{ path('app_blog_list') }}"><li>Blog</li></a>
+            <li>Contact</li><a href="logout.php"><li>logout</li></a>
+        </nav> </div>
         {% block body %}{% endblock %}
     </body>
 </html>
